# WebpageMaker

./: .gitignore  CMakeLists.txt  README.html  README.md  main.c  ~$ordinacija.docx  ~WRL3245.tmp
design/: index.html  style.css
design/old/: style2.css  styles.css
example/: data.txt  index.html
include/: css_doc.h  file_utils.h  html_doc.h  logger.h  timeline.h  user_input.h
res/: index.html  index2.html
res/design/: index.html
res/old/: index.html
res/test/: index.html  style.css
src/: css_doc.c  file_utils.c  html_doc.c  logger.c  main.c  timeline.c  user_input.c
